# SQL-Code-Review-Environment

./: .env.example  Dockerfile  README.md  app.py  env_core.py  inference.py  openenv.yaml  pyproject.toml  run_auto_sre.sh  test_env.py  validate_output.txt
auto-sre/: .gitignore  git_push.py
auto-sre/app/: ui.py
auto-sre/app/routes/: baseline.py  grader.py  reset.py  state.py  step.py
auto-sre/app/schemas/: action.py
auto-sre/scripts/: edge_test.py
server/: app.py
