[project]
name = "sql-review-env"
version = "1.0.0"
description = "OpenEnv-compatible SQL Code Review environment"
requires-python = ">=3.11"
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi",
    "uvicorn[standard]",
    "openai",
    "requests",
]

[project.scripts]
server = "server.app:main"

[tool.hatch.build]
include = [
  "server/",
  "app.py",
  "env_core.py",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
