[project]
name = "sql-review-env"
version = "1.0.0"
description = "OpenEnv-compatible SQL Code Review environment"
requires-python = ">=3.11"
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi",
    "uvicorn[standard]",
    "openai",
    "requests",
    "python-dotenv",
  "pytest",
  "pytest-asyncio",
]

[project.scripts]
server = "server.app:main"

[tool.hatch.build]
include = [
  "server/",
  "app.py",
  "env_core.py",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
  "asyncio: mark test as asyncio-compatible",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
